# agentguard

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LAUNCH.md  LICENSE  Makefile  QWEN.md  README.md  fly.toml  go.mod  main.go  policy.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  test.yml
audit/: logger.go  schema.sql
auth/: hmac.go  hmac_test.go  store.go
cmd/cli/: escalate.go  health.go  main.go  serve.go  simulate.go  validate.go
config/: config.go
docs/: openapi.yaml  postman_collection.json
escalation/: handlers.go  store.go  webhook.go
examples/: docker-compose.example.yml  node_mcp_example.ts  policy.yaml  python_mcp_example.py
health/: handler.go
memory/: client.go
notify/: discord.go  notifier.go  slack.go
policy/: advanced.go  engine.go  irreversible.go  types.go
protocol/: a2a.go  atxp.go  mcp.go
proxy/: headers.go  interceptor.go  middleware.go  ratelimit.go  reload.go  server.go  shutdown.go  status.go
scripts/: smoke-test.sh
sdk/node/: README.md  package-lock.json  package.json
sdk/node/src/: index.ts  policy.ts  proxy.ts  verify.ts
sdk/node/tests/: proxy.test.ts
sdk/python/: README.md  pyproject.toml
sdk/python/agentguard/: __init__.py  policy.py  proxy.py  verify.py
sdk/python/tests/: test_proxy.py
spend/: tracker.go
supabase/: migration.sql  rls_complete.sql
